complete hero.vue and about.vue

--- a/protofile/src/assets/css/common.css
+++ b/protofile/src/assets/css/common.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 :root {
     --header-height: 3rem;
 
@@ -74,7 +80,22 @@ body {
     font-weight: 600;
 }
 
+.button:hover .icon {
+    filter: brightness(0) saturate(100%);
+}
+
 .icon-light {
-    filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(0%) hue-rotate(55deg)
-      brightness(108%) contrast(101%);
+    filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(0%) hue-rotate(55deg) brightness(108%) contrast(101%);
+}
+
+.has-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
+.icon {
+    width: 24px;
+    height: 24px;
 }
